Video/html5 :: Fix z-index for overlay

--- a/app/assets/stylesheets/custom_plugins/_mediaelement.sass
+++ b/app/assets/stylesheets/custom_plugins/_mediaelement.sass
@@ -2,10 +2,10 @@
   width: 100px
 
   ul li
-    input[type="radio"] + label
-      margin-left: 3px
-      margin-right: 0
+    input[type='radio'] + label
       width: initial
+      margin-right: 0
+      margin-left: 3px
       color: $white
 
 // Background video for pages
@@ -15,23 +15,25 @@
   height: 100%
 
   @include overlay-video
+  &:after
+    z-index: -1
 
   .heading-video
     position: fixed
-    min-width: 100%
-    min-height: 100%
+    z-index: -100
     top: 50%
     left: 50%
+    min-width: 100%
+    min-height: 100%
     transform: translate(-50%, -50%)
-    z-index: -100
 
 
 // Logo
 .mejs-container .mejs-controls .mejs-logo-button
-  text-indent: 100%
-  white-space: nowrap
   overflow: hidden
   cursor: pointer
+  white-space: nowrap
+  text-indent: 100%
 
   span
     display: block
